--- a/about.html
+++ b/about.html
@@ -29,13 +29,13 @@
                     class="hidden md:flex flex-col md:flex-row basis-auto grow justify-between items-start md:items-center gap-5 md:gap-0">
                     <nav>
                         <ul class="flex flex-col md:flex-row gap-8 capitalize py-">
-                            <li><a href="" class="text-lg font-bold text-grey-600 text-white hover:text-black">Home</a>
+                            <li><a href="index.html" class="text-lg font-bold text-grey-600 text-white hover:text-black">Home</a>
                             </li>
-                            <li><a href="" class="text-lg font-bold text-grey-600 text-white hover:text-black">Shop</a>
+                            <li><a href="shop.html" class="text-lg font-bold text-grey-600 text-white hover:text-black">Shop</a>
                             </li>
-                            <li><a href="" class="text-lg font-bold text-grey-600 text-white hover:text-black">About</a>
+                            <li><a href="about.html" class="text-lg font-bold text-grey-600 text-white hover:text-black">About</a>
                             </li>
-                            <li><a href="" class="text-lg font-bold text-grey-600 text-white hover:text-black">Blogs</a>
+                            <li><a href="blogs.html" class="text-lg font-bold text-grey-600 text-white hover:text-black">Blogs</a>
                             </li>
                             <li><a href="" class="text-lg font-bold text-grey-600 text-white hover:text-black">Quick
                                     links</a></li>
