--- a/account.html
+++ b/account.html
@@ -29,18 +29,16 @@
                 class="hidden md:flex flex-col md:flex-row basis-auto grow justify-between items-start md:items-center gap-5 md:gap-0">
                 <nav>
                     <ul class="flex flex-col md:flex-row gap-8 capitalize py-">
-                        <li><a href="http://127.0.0.1:5501/home.html"
-                                class="text-lg font-bold text-grey-600 text-white hover:text-black hover:font-semibold">Home</a>
+                        <li><a href="index.html" class="text-lg font-bold text-grey-600 text-white hover:text-black">Home</a>
                         </li>
-                        <li><a href=""
-                                class="text-lg font-bold text-grey-600 text-white hover:text-black hover:font-semibold">Shop</a>
+                        <li><a href="shop.html" class="text-lg font-bold text-grey-600 text-white hover:text-black">Shop</a>
                         </li>
-                        <li><a href=""
-                                class="text-lg font-bold text-grey-600 text-white hover:text-black hover:font-semibold">About</a>
+                        <li><a href="about.html" class="text-lg font-bold text-grey-600 text-white hover:text-black">About</a>
                         </li>
-                        <li><a href=""
-                                class="text-lg font-bold text-grey-600 text-white hover:text-black hover:font-semibold">Blogs</a>
+                        <li><a href="blogs.html" class="text-lg font-bold text-grey-600 text-white hover:text-black">Blogs</a>
                         </li>
+                        <li><a href="" class="text-lg font-bold text-grey-600 text-white hover:text-black">Quick
+                                links</a></li>
                     </ul>
                 </nav>
                 <div class="relative w-max mx-auto">
